--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -1,6 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
+
+//    signingConfigs {
+//        debugConfig {
+//            storeFile file("zhilianyc.jks")
+//            storePassword "zhilianyc123"
+//            keyAlias "zhilianyc"
+//            keyPassword "zhilianyc123"
+//        }
+//    }
+
+
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
@@ -9,13 +20,30 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        /**
+         debug {
+         minifyEnabled false
+         signingConfig signingConfigs.debugConfig
+         }
+         release {
+         // 混淆
+         minifyEnabled false
+         // Zipalign优化
+         zipAlignEnabled true
+         // 移除无用的resource文件
+         shrinkResources true
+         // 前一部分代表系统默认的android程序的混淆文件，该文件已经包含了基本的混淆声明，后一个文件是自己的定义混淆文件
+         proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+         signingConfig signingConfigs.debugConfig
+         }
+         */
     }
 }
 
@@ -23,7 +51,20 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //图片
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    //添加HttpLoggingInterceptor进行调试
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    //rxjava2
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.x.y'
+    //配合Rxjava 使用
+    implementation 'com.google.code.gson:gson:2.6.2'
+    //导入retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    //导入retrofit
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //转换器，请求结果转换成Model
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 }
