--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation "com.google.android.material:material:1.0.0"
+
     //图片
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     //添加HttpLoggingInterceptor进行调试
