--- a/zhilianyc/app/src/main/AndroidManifest.xml
+++ b/zhilianyc/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity
             android:name=".view.my.AccountActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.my.MyTeamActivity"
+            android:windowSoftInputMode="adjustPan" />
 
     </application>
 
