安全中心子页面

--- a/zhilianyc/app/src/main/AndroidManifest.xml
+++ b/zhilianyc/app/src/main/AndroidManifest.xml
@@ -36,6 +36,18 @@
         <activity
             android:name=".view.my.MyTeamActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.security.SecurityActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.security.ModifyPwdActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.security.CapitalSetActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.security.AuthenticationActivity"
+            android:windowSoftInputMode="adjustPan" />
 
     </application>
 
