--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -70,4 +70,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     //转换器，请求结果转换成Model
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
+    //选择器
+    implementation 'com.contrarywind:Android-PickerView:4.1.9'
 }
