--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -73,4 +73,6 @@ dependencies {
 
     //选择器
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
+    //textview标签
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
