注册 忘记密码

--- a/zhilianyc/app/src/main/AndroidManifest.xml
+++ b/zhilianyc/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
         <activity
             android:name=".view.security.AddressSetActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.login.ForgetActivity"
+            android:windowSoftInputMode="adjustPan" />
 
     </application>
 
