--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.android.support:support-v4:29+'
+    implementation 'com.android.support:appcompat-v7:29+'
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation "com.google.android.material:material:1.0.0"
