--- a/zhilianyc/build.gradle
+++ b/zhilianyc/build.gradle
@@ -4,10 +4,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +17,12 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "http://test.vlion.cn:8081/nexus/content/repositories/inland/"
+        }
+        maven {
+            url "https://dl.bintray.com/sunjiangrong/maven"
+        }
     }
 }
 
