--- a/zhilianyc/app/src/main/AndroidManifest.xml
+++ b/zhilianyc/app/src/main/AndroidManifest.xml
@@ -94,6 +94,9 @@
         <activity
             android:name=".view.shop.OrderDetailActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.account.MyBillActivity"
+            android:windowSoftInputMode="adjustPan" />
 
 
 <!--        新闻流-->
