商品分类列表

--- a/zhilianyc/app/src/main/AndroidManifest.xml
+++ b/zhilianyc/app/src/main/AndroidManifest.xml
@@ -109,6 +109,9 @@
         <activity
             android:name=".view.user.MyTaskActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.home.fragment.GoodsListActivity"
+            android:windowSoftInputMode="adjustPan" />
 
 
 <!--        新闻流-->
