--- a/zhilianyc/app/src/main/AndroidManifest.xml
+++ b/zhilianyc/app/src/main/AndroidManifest.xml
@@ -115,6 +115,9 @@
         <activity
             android:name=".view.shop.CreateOrderActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.otc.OtcFeedbackActivity"
+            android:windowSoftInputMode="adjustPan" />
 
 
 <!--        新闻流-->
