--- a/zhilianyc/app/src/main/AndroidManifest.xml
+++ b/zhilianyc/app/src/main/AndroidManifest.xml
@@ -35,14 +35,21 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".view.login.LoginActivity"
+            android:name=".view.SplashActivity"
             android:launchMode="singleTask"
+            android:theme="@style/SplashTheme"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".view.login.LoginActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustPan">
         </activity>
 
         <activity
