--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     //mpandroichart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    //banner
+    implementation 'com.youth.banner:banner:2.1.0'
 
 //    implementation 'com.android.support:multidex:1.0.3'
 
