--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -15,7 +15,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.play.zhilianyc"
+        applicationId "com.zlyc.www"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 3030
