--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -55,6 +55,13 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+
+    sourceSets{
+        main{
+            jniLibs.srcDir 'libs'
+            jni.srcDirs = []    //disable automatic ndk-build
+        }
+    }
 }
 
 dependencies {
