--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -16,7 +16,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.zqlc.www"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 3030
         versionName "3.0.3"
@@ -24,8 +24,18 @@ android {
         manifestPlaceholders = [
                 "APPLICATION_ID": applicationId,
         ]
+//        ndk {
+//            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
+//        }
         ndk {
-            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
+            abiFilters 'armeabi-v7a','x86','arm64-v8a','x86_64','armeabi'
+        }
+        packagingOptions {
+            doNotStrip "*/armeabi-v7a/*.so"
+            doNotStrip "*/x86/*.so"
+            doNotStrip "*/arm64-v8a/*.so"
+            doNotStrip "*/x86_64/*.so"
+            doNotStrip "armeabi.so"
         }
     }
     buildTypes {
@@ -115,4 +125,9 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.3'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
+    implementation ('com.tuia:sdk:3.0.4.0'){
+        transitive = true
+    }
+//    implementation files('libs/miit_mdid_1.0.13.aar')
 }
