--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -151,19 +151,19 @@ dependencies {
 //        exclude group: 'com.mintegral.msdk'
 //    }
     api('cn.vlion.advlion:inlandbase:1.0.30')
-            {
-                exclude group: 'cn.vlion.inland', module: 'inlandoaid'
-            }
+//            {
+//                exclude group: 'cn.vlion.inland', module: 'inlandoaid'
+//            }
     api('cn.vlion.advlion:inlandnewsX:1.0.27')
-            {
-                exclude group: 'cn.vlion.inland', module: 'inlandk'
-                exclude group: 'cn.vlion.inland', module: 'inlandoaid'
-            }
+//            {
+//                exclude group: 'cn.vlion.inland', module: 'inlandk'
+//                exclude group: 'cn.vlion.inland', module: 'inlandoaid'
+//            }
     api('cn.vlion.advlion:inlandgame:1.0.37')
-            {
-                exclude group: 'cn.vlion.inland', module: 'inlandk'
-                exclude group: 'cn.vlion.inland', module: 'inlandoaid'
-            }
+//            {
+//                exclude group: 'cn.vlion.inland', module: 'inlandk'
+//                exclude group: 'cn.vlion.inland', module: 'inlandoaid'
+//            }
     api 'com.github.bumptech.glide:glide:4.9.0'
 
     //新闻流----------------end
@@ -177,7 +177,9 @@ dependencies {
     }
 //    implementation files('libs/miit_mdid_1.0.13.aar')
 
-    implementation(name: 'msa_mdid_1.0.13', ext: 'aar')
+//    implementation(name: 'msa_mdid_1.0.13', ext: 'aar')
 //    implementation(name: 'arrPack-release', ext: 'aar')
-    implementation(name: 'zj_kssdk', ext: 'aar')
+//    implementation(name: 'zj_kssdk', ext: 'aar')
+
+    implementation(name: 'zj_sdk_2.1.6_ty', ext: 'aar')
 }
