--- a/zhilianyc/app/build.gradle
+++ b/zhilianyc/app/build.gradle
@@ -21,7 +21,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.zqlc.www"
+        applicationId "cn.net.zqlc.www"
 //        applicationId "com.zj.shop.towmall.hwxs"
         minSdkVersion 21
         targetSdkVersion 29
